--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About this website</title>
+<title>experience.knit</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -356,12 +356,40 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">About this website</h1>
 
 </div>
 
 
-<p>This website is made in rmarkdown</p>
+<div id="education" class="section level3">
+<h3>Education</h3>
+<p><strong>University of California, San Diego (UCSD), CA <span
+style="float:right">Sep 2018 - Jun 2022</span></strong><br />
+<em>Bachelor of Science in Biology with Specs in Bioinformatics</em></p>
+<p><br></p>
+</div>
+<div id="research-experience" class="section level3">
+<h3>Research Experience</h3>
+<p><strong>Zorrilla Lab, Scripps Research Institute, CA <span
+style="float:right">Sep 2021 - Mar 2022</span></strong></p>
+<ul>
+<li><p>Participate in the lab’s ongoing project, <em>Characterization of
+the Genetic and Neural Bases of Psychiatric and Obesity-related
+Disorders</em>, and acquire essential programming skills.</p></li>
+<li><p>Develop an understanding of the common machine learning algorithm
+manipulations in DNA datasets from patients and practice Random Forest
+to select predictors.</p></li>
+</ul>
+<p><br></p>
+</div>
+<div id="skills-and-languages" class="section level3">
+<h3>Skills and Languages</h3>
+<ul>
+<li>Python</li>
+<li>JavaScript</li>
+<li>C++</li>
+</ul>
+<p>Intermediate Level in Matlab, Linux commands, R.</p>
+</div>
 
 
 
