--- a/about.html
+++ b/about.html
@@ -336,6 +336,9 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;lg3239@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
